k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renec-harvester
  labels:
    name: renec-harvester
    environment: production
